# systolic-mlir

./: .gitignore  CMakeLists.txt  README.md  full_tile_matmul_rewrite.patch  gen_conv2d_sweep.py  handle_rename.patch  runtime_abstraction.patch
hls/gemm_4x4/: design.cpp  hls_config_full_precision.cfg  hls_config_full_precision_auto.cfg  hls_config_full_precision_zynq.cfg  matmul_4x4_only.mlir  matmul_4x4_systolic.mlir  program_bitstream.tcl  run_hls.tcl  (+4 more)
include/: CMakeLists.txt
runtime/: debug_single_case.py  debug_single_row.py  diagnose_conv_vs_matmul.py  diagnose_uart_raw.py  diagnose_ulp.py  extract_and_retest.py  fpga_conv2d_im2col.c  fpga_conv2d_im2col.h  fpga_matmul4x4.c  fpga_matmul4x4.h  fpga_matmul_tiled.c  fpga_matmul_tiled.h  investigate_conv2d_ulp.py  reference.py  run_conv2d_shape  run_conv2d_shape.c  run_conv2d_shape_asan  run_conv2d_shape_delay  run_conv2d_sweep.py  run_shape.c  systolic_dispatch_sim.c  systolic_dispatch_uart.c  test_fpga_batch_matmul  test_fpga_batch_matmul.c  test_fpga_conv2d.c  test_fpga_conv2d_auto.c  test_fpga_conv2d_general.c  test_fpga_conv2d_nchw  test_fpga_conv2d_nchw.c  test_fpga_dot  test_fpga_dot.c  test_fpga_matmul4x4.c  test_fpga_matmul4x4_alternate  test_fpga_matmul4x4_alternate.c  test_fpga_matmul4x4_isolate  test_fpga_matmul4x4_isolate.c  test_fpga_matmul4x4_stress  test_fpga_matmul4x4_stress.c  test_fpga_matmul_tiled.c  test_fpga_matvec  (+7 more)
scripts/: compile_torch_mlir.sh  fix_torch_mlir_syntax.py
sweep_out/: conv_sweep_002.mlir  conv_sweep_003.mlir  conv_sweep_005.mlir  conv_sweep_008.mlir  conv_sweep_009.mlir  conv_sweep_010.mlir  conv_sweep_011.mlir  conv_sweep_014.mlir  conv_sweep_016.mlir  conv_sweep_017.mlir  conv_sweep_018.mlir  conv_sweep_019.mlir  conv_sweep_021.mlir  conv_sweep_022.mlir  conv_sweep_023.mlir  conv_sweep_024.mlir  conv_sweep_027.mlir  conv_sweep_029.mlir  conv_sweep_031.mlir  conv_sweep_032.mlir  conv_sweep_033.mlir  conv_sweep_034.mlir  conv_sweep_037.mlir  conv_sweep_041.mlir  conv_sweep_042.mlir  conv_sweep_043.mlir  conv_sweep_045.mlir  conv_sweep_046.mlir  conv_sweep_047.mlir  conv_sweep_048.mlir  sweep_results_template.csv
tools/: CMakeLists.txt
tools/systolic-opt/: CMakeLists.txt  systolic-opt.cpp
tools/systolic-translate/: CMakeLists.txt  systolic-translate.cpp
(+730 files in other folders)
